--- a/src/components/Editor/Editor.module.css
+++ b/src/components/Editor/Editor.module.css
@@ -2,6 +2,9 @@
 
 .editor {
   flex-basis: 50%;
+  border-right: 1px solid makerLightGrey;
+  padding: 0.5em 2em;
+  overflow-y: auto;
 }
 
 .title {
